# agent-reliability-corpus

./: .gitignore  DATASHEET.md  LICENSE  LICENSE-DATA  PAPER.md  README.md  pyproject.toml
.github/workflows/: backfill.yml  ci.yml  weekly.yml
data/: kappa_report_2026-W18_mistral.json  kappa_report_2026-W18_mistral_vs_llama33.json  kappa_report_2026-W18_v4pro_vs_gpt55.json  kappa_report_2026-W18_v4pro_vs_llama33.json  pipeline_state.json  relabel_2026-W18_gpt55.parquet  relabel_2026-W18_llama33_70b.parquet  relabel_2026-W18_mistral_medium.parquet
src/agentfail/: __init__.py  classify.py  crosslink.py  curator.py  eval.py  frameworks.py  merge.py  pipeline.py  publish.py  schema.py  scrape.py  taxonomy.py
tests/: conftest.py  test_classify.py  test_crosslink.py  test_eval.py  test_merge.py  test_pipeline.py  test_publish.py  test_schema.py  test_scrape.py  test_taxonomy.py
