[project]
name = "agent-reliability-corpus"
version = "0.1.0"
description = "Continuously-mined, cross-linked corpus of agent framework failures, classified against a unified academic taxonomy."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Agent Reliability Corpus contributors" }]
dependencies = [
    "openai>=1.50.0",
    "pydantic>=2.9.0",
    "pydantic-ai>=0.0.14",
    "polars>=1.10.0",
    "duckdb>=1.1.0",
    "datasets>=3.0.0",
    "httpx>=0.27.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "scikit-learn>=1.5.0",  # TF-IDF + cosine for the cross-linker
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
    "ruff>=0.7.0",
    "pyright>=1.1.380",
    "syrupy>=4.7.0",
]

[project.scripts]
arc-pipeline = "agentfail.pipeline:main"
arc-curator = "agentfail.curator:main"
arc-merge-shards = "agentfail.merge:main"
arc-relabel = "agentfail.eval:relabel_main"
arc-kappa = "agentfail.eval:kappa_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentfail"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RET"]
ignore = ["E501"]  # line length handled by formatter

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
# Point pyright at the project venv so third-party imports resolve.
venvPath = "."
venv = ".venv"
# "standard" catches real bugs (wrong types, missing attrs) without flooding
# on "unknown type" noise from libs without complete type stubs (structlog,
# datasets). Strict is an aspiration — revisit once the ecosystem catches up.
typeCheckingMode = "standard"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
